<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:background="#ff333dff"
        android:contentDescription="@string/chews_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chews_name"
        android:id="@+id/textChews"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:textColor="#ffffffff"
        android:typeface="sans" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chews_button"
        android:id="@+id/buttonChews"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_button"
        android:id="@+id/buttonPlus"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textChews"
        android:layout_toEndOf="@+id/textChews"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_button"
        android:id="@+id/buttonList"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonChews"
        android:layout_toStartOf="@+id/buttonChews" />


</RelativeLayout>
