<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.chagas.chews.AddEditRestaurantActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/addEditScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:orientation="vertical"
            android:useDefaultMargins="true" >

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords" >
            </EditText>

            <EditText
                android:id="@+id/typeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_type"
                android:imeOptions="actionNext"
                android:inputType="text" >
            </EditText>

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress" >
            </EditText>

            <CheckBox
                android:id="@+id/drinkEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_drink"
                android:imeOptions="actionNext"
                 >
            </CheckBox>

            <RatingBar
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               
                android:imeOptions="actionNext"
                android:numStars="5">
            </RatingBar>

            <EditText
                android:id="@+id/commentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_comment"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine" >
            </EditText>

            <Button
                android:id="@+id/saveRestaurantButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_save_restaurant" >
            </Button>
        </GridLayout>

    </ScrollView>
</RelativeLayout>
